[project]
name = "verifiers"
authors = [
    {name = "William Brown", email = "williambrown97@gmail.com"},
]
version = "0.1.0"
description = "Verifiers for reinforcement learning with LLMs"
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch==2.5.1",
    "setuptools",
    "peft",
    "wandb",
    "rich",
    "duckduckgo-search",
    "trl==0.16.0",
    "vllm",
    "brave-search",
    "latex2sympy>=1.0.3",
    "math-verify[antlr4-13-2]>=0.1.0",
    "pylatexenc>=2.10",
    "requests>=2.32.3",
    "transformers>=4.51.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "psycopg>=3.2.6",
    "pgvector>=0.4.0",
    "psycopg-binary>=3.2.6",
    "sentence-transformers>=4.1.0",
]

[tool.setuptools]
packages = ["verifiers"]
